--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "trinket"
-version = "0.1.0"
+version = "1.0.0"
+repository = "https://github.com/DkeRee/Trinket"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
