--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,13 @@ version = "3.0.0"
 repository = "https://github.com/DkeRee/Trinket"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[dependencies]
+cozy-chess = "0.3.0"
 
 [profile.dev]
 opt-level = 3
 lto = "thin"
 
-[dependencies]
-cozy-chess = "0.3.0"
+[profile.release]
+codegen-units = 1
+lto = "fat"
