--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,9 @@ edition = "2021"
 opt-level = 3
 lto = "thin"
 
+[profile.release]
+codegen-units = 1
+lto = "fat"
+
 [dependencies]
 cozy-chess = "0.2.1"
