--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 cozy-chess = "0.3.1"
 bytemuck = { version = "1.12.1", features = ["derive"] }
+num_cpus = "1.13.1"
 
 [profile.dev]
 opt-level = 3
